--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         </div>
         <!-- End Section Title -->
 
-     <div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
   <div class="row">
 
     <!-- Backend & Programming -->
@@ -279,6 +279,7 @@
         <li>Node.js</li>
         <li>JavaScript</li>
         <li>REST APIs</li>
+        <li>FastAPI</li>
         <li>Postman</li>
         <li>Git &amp; version control</li>
       </ul>
@@ -313,7 +314,7 @@
     <div class="col-md-6 col-lg-4">
       <h4>Networking, Security &amp; Identity</h4>
       <ul class="two-column-list">
-        <li>TCP/IP fundamentals</li>
+        <li>TCP/IP</li>
         <li>DNS, DHCP, routing basics</li>
         <li>SSH &amp; remote administration</li>
         <li>HTTPS, certificates, reverse proxies</li>
@@ -331,6 +332,7 @@
         <li>SQL</li>
         <li>PostgreSQL</li>
         <li>MongoDB</li>
+        <li>PyTorch</li>
         <li>n8n</li>
         <li>Zapier &amp; workflow automation</li>
         <li>LLM APIs (OpenAI, Gemini)</li>
@@ -353,6 +355,7 @@
 
   </div>
 </div>
+
 
 
         <!-- Soft Skills Section -->
