--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Remi Koppel Portfolio</title>
+    <title>Veronica Piuri Portfolio</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -120,12 +120,12 @@
         <div class="container" data-aos="zoom-out">
           <div class="row justify-content-center">
             <div class="col-lg-9">
-              <h2>Remi Koppel</h2>
+              <h2>Veronica Piuri</h2>
               <p>
                 I'm
                 <span
                   class="typed"
-                  data-typed-items="an Automation Engineer, a Solution Architect, a DevOps, a Software Engineer, an ICT Specialist"
+                  data-typed-items="an Environmental Engineer, a Air Quality Consultant, a Project Manager, a Programmer, passionate about climate adaptation"
                   ></span
                 ><span
                   class="typed-cursor typed-cursor--blink"
@@ -133,15 +133,15 @@
                 ></span>
               </p>
               <div class="social-links">
-                <a href="https://www.linkedin.com/in/mohammadalshurbaji/"
+                <a href="www.linkedin.com/in/veronica-piuri-a22016199"
                   ><i class="bi bi-linkedin"></i
                 ></a>
-                <a href="https://github.com/Mohammadalshurbaji"
+                <a href="https://github.com/veronicapiuri"
                   ><i class="bi bi-github"></i
                 ></a>
-                <a href="https://leetcode.com/u/mohammadalshurbaji/"
-                  ><i class="bi bi-leetcode"></i
-                ></a>
+               <!--    <a href="https://leetcode.com/u/mohammadalshurbaji/"
+                  ><i class="bi bi-leetcode"></i 
+                ></a> -->
               </div>
             </div>
           </div>
