Revise profile details and expertise description
Updated personal information and professional background in index.html.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 I'm
                 <span
                   class="typed"
-                  data-typed-items="an Environmental Engineer, a Air Quality Consultant, a Project Manager, a Programmer, passionate about climate adaptation"
+                  data-typed-items="an Environmental Engineer, an Air Quality Consultant, a Project Manager, a Programmer, passionate about climate adaptation"
                   ></span
                 ><span
                   class="typed-cursor typed-cursor--blink"
@@ -133,7 +133,7 @@
                 ></span>
               </p>
               <div class="social-links">
-                <a href="www.linkedin.com/in/veronica-piuri-a22016199"
+                <a href="https://linkedin.com/in/veronica-piuri-a22016199"
                   ><i class="bi bi-linkedin"></i
                 ></a>
                 <a href="https://github.com/veronicapiuri"
@@ -155,12 +155,9 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>About</h2>
           <p>
-            Software &amp; Automation Engineer with a strong background in cloud-native
-            systems, infrastructure as code, and CI/CD. I design and maintain
-            reliable platforms on GCP and hybrid environments, connecting data,
-            AI services, and business applications. I enjoy working close to
-            stakeholders, translating real needs into pragmatic technical
-            solutions that scale.
+            Environmental Engineer with a strong background in environmental planning, monitoring, and data-driven analysis. 
+            I have experience in academic research on climate adaptation, water management, and AI-based environmental modeling, and I currently work as a consultant in air quality, 
+            supporting monitoring and assessment activities.
           </p>
         </div>
         <!-- End Section Title -->
@@ -168,33 +165,29 @@
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4 justify-content-center">
             <div class="col-lg-4">
-              <img src="assets/img/remiLinkedInphoto.jpeg" class="img-fluid" alt="Remigiusz Koppel" />
+              <img src="assets/img/veroLinkedInphoto.jpeg" class="img-fluid" alt="Veronica Piuri" />
             </div>
             <div class="col-lg-8 content">
-              <h2>Software &amp; Automation Engineer</h2>
+              <h2>Environmental Engineer</h2>
               <p class="py-3" style="text-align: justify">
-                My path started in <strong>Automation and Robotics</strong>, where I learned how
-                to design and control complex systems. I later specialised in
-                <strong>ICT Engineering</strong>, focusing on software, networks, and cloud
-                infrastructure. Today I work as a Software Engineer and Automation
-                Consultant, building end-to-end solutions on <strong>GCP</strong>, <strong>Azure</strong> and hybrid
-                setups: containerised services,
-                CI/CD pipelines, and observability for critical systems.
-                I particularly enjoy projects where <strong>AI and automation meet</strong> –
-                such as AI-centered applications, automated pipelines, and
-                data-processing platforms.
+                My path started in <strong>Environmental Engineering</strong>, where I developed expertise in designing and managing complex systems. I later specialised in
+                <strong>Environmental land planning and monitoring</strong>,  with a focus on natural resource modeling, water management, and climate adaptation. 
+                For three years, I worked as a researcher at Politecnico di Milano, concentrating on the water-energy-food nexus, model integration, and the application of AI/ML techniques for environmental modeling. 
+                Currently, I serve as an <strong>Air Quality Modeller</strong> at SUEZ/Arianet, where I lead local studies addressing industrial and traffic emissions.
+                I am especially passionate about projects where <strong>Data and Policy Making intersect</strong> –
+                driving solutions that foster a more equitable future for both people and the environment.
               </p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
-                    <li>
+                    <!--<li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Phone:</strong> <span>+45 91 74 48 53</span>
-                    </li>
+                    </li> -->
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>City:</strong>
-                      <span>Copenhagen, Denmark</span>
+                      <span>Milan, Italy</span>
                     </li>
                   </ul>
                 </div>
@@ -203,11 +196,11 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Degree:</strong>
-                      <span>MSc in ICT Engineering, Aalborg University</span>
+                      <span>MSc in Environmental Engineering, Politecnico di Milano</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Email:</strong> <span>remikoppel@gmail.com</span>
+                      <strong>Email:</strong> <span>veronica.piuri@gmail.com</span>
                     </li>
                   </ul>
                 </div>
