--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <!-- /About Section -->
 
 
-      <!-- Stats Section -->
+      <!-- Stats Section 
       <section id="stats" class="stats section">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4">
@@ -223,14 +223,14 @@
               <div class="stats-item">
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="3"
+                  data-purecounter-end="4"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
                 <p>Years of Experience</p>
               </div>
             </div>
-            <!-- End Stats Item -->
+             End Stats Item -->
 
             <div
               class="col-lg-3 col-md-6 d-flex flex-column align-items-center"
