Update hero images and modify skills/experience sections
Updated images in the hero section and modified skills and experience sections to reflect new content. Removed outdated roles and added new positions with detailed descriptions.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section light-background">
-        <img src="assets/img/background.jpg" alt="" />
+        <img src="assets/img/background2.jpg" alt="" />
         <div class="container" data-aos="zoom-out">
           <div class="row justify-content-center">
             <div class="col-lg-9">
@@ -165,7 +165,7 @@
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4 justify-content-center">
             <div class="col-lg-4">
-              <img src="assets/img/veroLinkedInphoto.jpeg" class="img-fluid" alt="Veronica Piuri" />
+              <img src="assets/img/Veronica.jpg" class="img-fluid" alt="Veronica Piuri" />
             </div>
             <div class="col-lg-8 content">
               <h2>Environmental Engineer</h2>
@@ -264,87 +264,83 @@
   <div class="container" data-aos="fade-up" data-aos-delay="100">
   <div class="row">
 
-    <!-- Backend & Programming -->
-    <div class="col-md-6 col-lg-4">
-      <h4>Backend &amp; Programming</h4>
-      <ul class="two-column-list">
-        <li>Python</li>
-        <li>Node.js</li>
-        <li>JavaScript</li>
-        <li>REST APIs</li>
-        <li>FastAPI</li>
-        <li>Postman</li>
-        <li>Git &amp; version control</li>
-      </ul>
-    </div>
+<!-- Climate & Hydrological Modelling -->
+<div class="col-md-6 col-lg-4">
+  <h4>Climate &amp; Environmental Modelling</h4>
+  <ul class="two-column-list">
+    <li>Hydrological modelling </li>
+    <li>Climate projections (GCM / RCM)</li>
+    <li>Bias correction &amp; downscaling (LOCI, EQM)</li>
+    <li>Air Quality Monitoring</li>
+    <li>Streamflow simulation</li>
+    <li>Climate risk assessment</li>
+  </ul>
+</div>
 
-    <!-- Frameworks & Frontend -->
-    <div class="col-md-6 col-lg-4">
-      <h4>Frameworks &amp; Frontend</h4>
-      <ul class="two-column-list">
-        <li>React</li>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>Express.js</li>
-      </ul>
-    </div>
+<!-- Water–Energy–Food Systems -->
+<div class="col-md-6 col-lg-4">
+  <h4>Water–Energy–Food Systems</h4>
+  <ul class="two-column-list">
+    <li>Integrated WEF modelling</li>
+    <li>Dam operation optimization</li>
+    <li>Water allocation modelling</li>
+    <li>Agricultural water demand modelling</li>
+    <li>Aquaponics &amp; hydroponics systems</li>
+    <li>Desalination integration modelling</li>
+  </ul>
+</div>
 
-    <!-- DevOps & Cloud -->
-    <div class="col-md-6 col-lg-4">
-      <h4>DevOps &amp; Cloud</h4>
-      <ul class="two-column-list">
-        <li>Linux</li>
-        <li>Bash</li>
-        <li>Docker</li>
-        <li>CI/CD (GitHub Actions, GitLab CI)</li>
-        <li>Google Cloud Platform (GCP)</li>
-        <li>Microsoft Azure</li>
-        <li>Firebase</li>
-      </ul>
-    </div>
+<!-- Data Analysis & Programming -->
+<div class="col-md-6 col-lg-4">
+  <h4>Data Analysis &amp; Programming</h4>
+  <ul class="two-column-list">
+    <li>Python</li>
+    <li>MATLAB</li>
+    <li>R</li>
+    <li>Large environmental datasets</li>
+    <li>Time-series analysis</li>
+    <li>Data visualization</li>
+    <li>Unix &amp; scientific workflows</li>
+  </ul>
+</div>
 
-    <!-- Networking, Security & Identity -->
-    <div class="col-md-6 col-lg-4">
-      <h4>Networking, Security &amp; Identity</h4>
-      <ul class="two-column-list">
-        <li>TCP/IP</li>
-        <li>DNS, DHCP, routing basics</li>
-        <li>SSH &amp; remote administration</li>
-        <li>HTTPS, certificates, reverse proxies</li>
-        <li>Windows Server administration</li>
-        <li>Identity &amp; access management</li>
-        <li>OAuth2 / OpenID Connect</li>
-        <li>Single Sign-On (SSO)</li>
-      </ul>
-    </div>
+<!-- Machine Learning & AI for Environment -->
+<div class="col-md-6 col-lg-4">
+  <h4>Machine Learning &amp; AI for Environment</h4>
+  <ul class="two-column-list">
+    <li>Artificial Neural Networks (ANN)</li>
+    <li>LSTM for hydrological modelling</li>
+    <li>Environmental process modelling</li>
+    <li>Model calibration &amp; validation</li>
+    <li>Optimization algorithms</li>
+    <li>Uncertainty analysis</li>
+  </ul>
+</div>
 
-    <!-- Data, Automation & AI -->
-    <div class="col-md-6 col-lg-4">
-      <h4>Data, Automation &amp; AI</h4>
-      <ul class="two-column-list">
-        <li>SQL</li>
-        <li>PostgreSQL</li>
-        <li>MongoDB</li>
-        <li>PyTorch</li>
-        <li>n8n</li>
-        <li>Zapier &amp; workflow automation</li>
-        <li>LLM APIs (OpenAI, Gemini)</li>
-        <li>NLP</li>
-      </ul>
-    </div>
+<!-- GIS & Remote Sensing -->
+<div class="col-md-6 col-lg-4">
+  <h4>GIS &amp; Remote Sensing</h4>
+  <ul class="two-column-list">
+    <li>QGIS</li>
+    <li>Spatial data processing</li>
+    <li>Satellite data analysis</li>
+    <li>Radar &amp; spectral data basics</li>
+    <li>Geospatial datasets integration</li>
+  </ul>
+</div>
 
-    <!-- Other -->
-    <div class="col-md-6 col-lg-4">
-      <h4>Other</h4>
-      <ul class="two-column-list">
-        <li>AutoCAD</li>
-        <li>Blender</li>
-        <li>Rhino Grasshopper</li>
-        <li>MATLAB</li>
-        <li>ETAP</li>
-        <li>3CAD</li>
-      </ul>
-    </div>
+<!-- Research & Project Management -->
+<div class="col-md-6 col-lg-4">
+  <h4>Research &amp; Project Management</h4>
+  <ul class="two-column-list">
+    <li>EU-funded projects</li>
+    <li>Interdisciplinary collaboration</li>
+    <li>Scientific writing</li>
+    <li>Conference presentations (EGU)</li>
+    <li>Policy-oriented reporting</li>
+    <li>Stakeholder engagement</li>
+  </ul>
+</div>
 
   </div>
 </div>
@@ -360,7 +356,6 @@
             <span>Leadership</span>
             <span>Communication with Stakeholders</span>
             <span>Teamwork &amp; Remote Collaboration</span>
-            <span>Agile / SCRUM</span>
             <span>Project &amp; Delivery Focus</span>
           </div>
         </div>
@@ -370,8 +365,8 @@
           <h4 class="text-center">Languages</h4>
           <div class="d-flex justify-content-between text-center flex-wrap gap-2">
             <span>English – Fluent</span>
-            <span>Polish – Native</span>
-            <span>Italian – Communicative</span>
+            <span>Italian – Native</span>
+            <span>Portuguese – Communicative</span>
           </div>
         </div>
       </section>
@@ -394,101 +389,98 @@
               <h3 class="resume-title">Professional Experience</h3>
 
 
-      <!-- Self-employed B2B contractor -->
-      <div class="resume-item" style="text-align: justify">
-        <h4>Self-Employed · B2B Software &amp; Automation Engineer</h4>
-        <h5>2025 – Present</h5>
-        <p><em>Remote · Web applications, AI-powered tools &amp; automations for SMEs, IT Consulting</em></p>
-        <ul>
-          <li>
-            Design and develop full-stack web applications (front-end and back-end)
-            deployed on GCP/Azure.
-          </li>
-          <li>
-            Build AI-enabled solutions (chatbots, assistants, OCR + LLM workflows,
-            automatic report generators) that streamline internal processes.
-          </li>
-          <li>
-            Deliver backend services and APIs in Node.js and Python, integrating
-            external systems (ERP/CRM, accounting, analytics).
-          </li>
-          <li>
-            Implement automation pipelines and DevOps practices (CI/CD, monitoring,
-            logging) to support long-term maintainable products.
-          </li>
-        </ul>
-      </div>
+     <!-- ARIANET -->
+  <div class="resume-item" style="text-align: justify">
+    <h4>ARIANET, Milan, Italy</h4>
+    <h5>Nov 2025 – Present</h5>
+    <p><em>Air Quality Modeler</em></p>
+    <ul>
+      <li>
+        Conduct atmospheric impact assessments related to transport and industrial sectors,
+        supporting environmental compliance and sustainability strategies.
+      </li>
+      <li>
+        Apply air quality modelling tools to simulate pollutant dispersion and evaluate
+        mitigation scenarios.
+      </li>
+      <li>
+        Process and analyse environmental datasets using programming tools to ensure
+        robust and reproducible results.
+      </li>
+      <li>
+        Contribute to technical reports and studies supporting regulatory and policy decisions.
+      </li>
+    </ul>
+  </div>
 
+  <!-- SoftWater -->
+  <div class="resume-item" style="text-align: justify">
+    <h4>SoftWater</h4>
+    <h5>Jul 2024 – Nov 2025</h5>
+    <p><em>Data Scientist</em></p>
+    <ul>
+      <li>
+        Contributed to EU-funded and consultancy projects focused on climate change adaptation
+        and water resource management.
+      </li>
+      <li>
+        Generated and processed climate projections (GCM/RCM) for impact assessments on
+        hydrological and agricultural systems.
+      </li>
+      <li>
+        Applied bias correction and downscaling techniques to improve the reliability
+        of precipitation and temperature scenarios.
+      </li>
+      <li>
+        Supported hydrological modelling and climate risk analysis for decision-support tools.
+      </li>
+    </ul>
+  </div>
 
+  <!-- Politecnico di Milano -->
+  <div class="resume-item" style="text-align: justify">
+    <h4>Politecnico di Milano, Milan, Italy</h4>
+    <h5>Jul 2022 – Nov 2025</h5>
+    <p><em>Scientific Researcher &amp; Project Manager</em></p>
+    <ul>
+      <li>
+        Developed a multi-objective optimization model to evaluate innovative water
+        management measures in arid and transboundary river basins.
+      </li>
+      <li>
+        Generated future climate and hydrological scenarios to support robust decision-making
+        under climate and global change.
+      </li>
+      <li>
+        Performed uncertainty analysis to assess the robustness of adaptation strategies.
+      </li>
+      <li>
+        Managed and coordinated EU-funded projects (AWESOME, CLINT), overseeing reporting,
+        stakeholder engagement and interdisciplinary collaboration.
+      </li>
+    </ul>
+  </div>
 
+  <!-- Nordic BioVentures -->
+  <div class="resume-item" style="text-align: justify">
+    <h4>Nordic BioVentures, Copenhagen Metropolitan Area</h4>
+    <h5>Jan 2024 – Jun 2024</h5>
+    <p><em>Junior Fellow – Tech Scouting</em></p>
+    <ul>
+      <li>
+        Conducted market and technology scouting focused on biosolutions and climate-tech
+        ventures across Europe.
+      </li>
+      <li>
+        Analysed investment trends, venture deals and exit strategies within the last decade.
+      </li>
+      <li>
+        Supported venture creation and incubation activities, contributing to early-stage
+        startup evaluation and funding readiness.
+      </li>
+    </ul>
+  </div>
 
-
-              
-              <div class="resume-item" style="text-align: justify">
-                <h4>&amp;SHUFL, Copenhagen, Denmark (Hybrid)</h4>
-                <h5>2023 – 2025</h5>
-                <p><em>Software &amp; Automation Engineer</em></p>
-                <ul>
-                  <li>
-                    Manage GCP-based infrastructure (Cloud Run, Secret Manager, Artifact Registry,
-                    Cloud SQL) and containerized backend services for internal and client-facing projects.
-                  </li>
-                  <li>
-                    Build and maintain CI/CD pipelines in GitHub Actions and GitLab CI for Node.js and
-                    Python services, ensuring reliable and repeatable deployments.
-                  </li>
-                  <li>
-                    Implement observability with structured logging, metrics and alerts, improving
-                    reliability and reducing incident resolution time.
-                  </li>
-                  <li>
-                    Develop automation and integration features (ERP/CRM workflows, reporting modules,
-                    Slack AI assistant) closely aligned with business processes.
-                  </li>
-                </ul>
-              </div>
-
-              <div class="resume-item" style="text-align: justify">
-                <h4>American University of Beirut (AUB), Beirut, Lebanon</h4>
-                <h5>Jun 2021 – Aug 2021</h5>
-                <p><em>Internship - Automation Engineer</em></p>
-                <ul>
-                  <li>
-                    Developed sensor-based data acquisition components as part of a campus-wide
-                    automation platform for energy optimisation.
-                  </li>
-                  <li>
-                    Implemented automation scripts that triggered actions based on sensor events
-                    and defined control logic.
-                  </li>
-                  <li>
-                    Collaborated with researchers and engineers to integrate modules into a broader
-                    monitoring and control system.
-                  </li>
-                </ul>
-              </div>
-
-              <div class="resume-item" style="text-align: justify">
-                <h4>Axians, Warsaw, Poland</h4>
-                <h5>Jun 2018 – Aug 2018</h5>
-                <p><em>Internship - ICT Technician</em></p>
-                <ul>
-                  <li>
-                    Worked on-site with telecommunications racks in the field, performing maintenance,
-                    basic troubleshooting and hardware replacement.
-                  </li>
-                  <li>
-                    Assisted in preparing and documenting maintenance procedures for signal antenna
-                    infrastructure and related network components.
-                  </li>
-                  <li>
-                    Gained hands-on experience with structured cabling, patching and practical
-                    application of TCP/IP networking fundamentals.
-                  </li>
-                </ul>
-              </div>
-            </div>
-            <!-- End Professional Experience -->
 
             <!-- Education -->
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
