Update personal information and job titles in index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 I'm
                 <span
                   class="typed"
-                  data-typed-items="an Environmental Engineer, an Air Quality Consultant, a Project Manager, a Programmer, passionate about climate adaptation"
+                  data-typed-items="an Environmental Engineer, an Air Quality Specialist, a Project Manager, a Programmer, passionate about climate adaptation"
                   ></span
                 ><span
                   class="typed-cursor typed-cursor--blink"
@@ -156,7 +156,8 @@
           <h2>About</h2>
           <p>
             Environmental Engineer with a strong background in environmental planning, monitoring, and data-driven analysis. 
-            I have experience in academic research on climate adaptation, water management, and AI-based environmental modeling, and I currently work as a consultant in air quality, 
+            I have experience in academic research on climate adaptation, water management, and AI-based environmental modeling, 
+            and I currently work as a consultant in air quality, 
             supporting monitoring and assessment activities.
           </p>
         </div>
@@ -172,7 +173,8 @@
               <p class="py-3" style="text-align: justify">
                 My path started in <strong>Environmental Engineering</strong>, where I developed expertise in designing and managing complex systems. I later specialised in
                 <strong>Environmental land planning and monitoring</strong>,  with a focus on natural resource modeling, water management, and climate adaptation. 
-                For three years, I worked as a researcher at Politecnico di Milano, concentrating on the water-energy-food nexus, model integration, and the application of AI/ML techniques for environmental modeling. 
+                For three years, I worked as a researcher at Politecnico di Milano, concentrating on the water-energy-food nexus, model integration, and the application 
+                of AI/ML techniques for environmental modeling. 
                 Currently, I serve as an <strong>Air Quality Modeller</strong> at SUEZ/Arianet, where I lead local studies addressing industrial and traffic emissions.
                 I am especially passionate about projects where <strong>Data and Policy Making intersect</strong> –
                 driving solutions that foster a more equitable future for both people and the environment.
@@ -196,7 +198,7 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Degree:</strong>
-                      <span>MSc in Environmental Engineering, Politecnico di Milano</span>
+                      <span>MSc in Environmental Engineering</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -230,7 +232,7 @@
                 <p>Years of Experience</p>
               </div>
             </div>
-             End Stats Item -->
+             End Stats Item 
 
             <div
               class="col-lg-3 col-md-6 d-flex flex-column align-items-center"
@@ -246,8 +248,8 @@
                 <p>Projects</p>
               </div>
             </div>
-            <!-- End Stats Item -->
-          </div>
+             End Stats Item -->
+         <!-- </div>
         </div>
       </section>
       <!-- /Stats Section -->
@@ -483,58 +485,50 @@
 
 
             <!-- Education -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="resume-title">Education</h3>
+  <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+    <h3 class="resume-title">Education</h3>
 
-              <div class="resume-item" style="text-align: justify">
-                <h4>Aalborg University, Copenhagen, Denmark</h4>
-                <h5>2023 – 2025</h5>
-                <p>
-                  <em>MSc in ICT Engineering (Software &amp; Cloud Systems)</em>
-                </p>
-                <p>
-                  Specialised in software engineering, distributed systems and cloud-native
-                  architectures, with projects focused on automation, DevOps and data-intensive applications.
-                </p>
-              </div>
+    <div class="resume-item" style="text-align: justify">
+      <h4>Politecnico di Milano, Milan, Italy</h4>
+      <h5>Sep 2019 – Apr 2022</h5>
+      <p>
+        <em>Master of Engineering (MEng), Environmental Engineering</em>
+      </p>
+      <p>
+        Specialized in water resources management, climate change impact assessment and
+        environmental systems modelling. Thesis focused on the integration of aquaponics
+        and desalination systems within large-scale water allocation models to improve
+        water–energy–food nexus resilience under climate change.
+      </p>
+    </div>
 
-              <div class="resume-item" style="text-align: justify">
-                <h4>West Pomeranian University of Technology, Szczecin, Poland</h4>
-                <h5>2020 – 2023</h5>
-                <p>
-                  <em>BSc in Automation and Robotics</em>
-                </p>
-                <p>
-                  Focused on control systems, industrial automation and embedded programming,
-                  building a strong technical foundation for backend and DevOps engineering.
-                </p>
-              </div>
+    <div class="resume-item" style="text-align: justify">
+      <h4>Universidade de Coimbra, Coimbra, Portugal</h4>
+      <h5>Feb 2020 – Jul 2020</h5>
+      <p>
+        <em>International Study Experience (Erasmus+)</em>
+      </p>
+      <p>
+        Exchange semester focused on environmental modelling, sustainable resource
+        management and international collaboration, strengthening interdisciplinary
+        and cross-cultural teamwork skills.
+      </p>
+    </div>
 
-              <div class="resume-item" style="text-align: justify">
-                <h4>Polytechnic Institute of Coimbra, Coimbra, Portugal</h4>
-                <h5>2019 – 2020</h5>
-                <p>
-                  <em>Erasmus+ Exchange – Automation and Robotics</em>
-                </p>
-                <p>
-                  One-year Erasmus+ mobility focused on automation, control and embedded systems
-                  in an international environment, strengthening both technical skills and cross-cultural collaboration.
-                </p>
-              </div>
-
-              <div class="resume-item" style="text-align: justify">
-                <h4>Vocational High School of IT, Warsaw, Poland</h4>
-                <h5>2014 – 2018</h5>
-                <p>
-                  <em>ICT Technician</em>
-                </p>
-                <p>
-                  Completed a professional track in computer networks, system administration
-                  and basic programming, including Cisco CCNA-level networking training.
-                </p>
-              </div>
-            </div>
-            <!-- End Education -->
+    <div class="resume-item" style="text-align: justify">
+      <h4>Politecnico di Milano, Milan, Italy</h4>
+      <h5>Sep 2016 – Sep 2019</h5>
+      <p>
+        <em>Bachelor of Engineering (BE), Environmental Engineering</em>
+      </p>
+      <p>
+        Built a strong foundation in environmental chemistry, hydraulics, hydrology,
+        circular economy and sustainable infrastructure, with emphasis on quantitative
+        analysis and environmental impact assessment.
+      </p>
+    </div>
+  </div>
+  <!-- End Education -->
           </div>
         </div>
 
@@ -1031,7 +1025,7 @@
         </div>
       </section>
       <!-- /Portfolio Section -->
-
+            
 
 
 
@@ -1175,15 +1169,15 @@
 
     <footer id="footer" class="footer position-relative light-background">
       <div class="container">
-        <h3 class="sitename">Remi Koppel</h3>
+        <h3 class="sitename">Veronica Piuri</h3>
         <p>
-          I’m Remi, Software & Automation Engineer with a strong background in cloud-native systems. I design and maintain reliable platforms and hybrid environments, connecting data, AI services, and business applications.
+          I’m Veronica, Environmental Engineer working on water systems, air quality and sustainable natural resource management through modelling and data-driven analysis.
         </p>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.linkedin.com/in/remigiusz-koppel/"
+          <a href="https://www.linkedin.com/in/veronica-piuri-a22016199/"
             ><i class="bi bi-linkedin"></i
           ></a>
-          <a href="https://github.com/koppelos"
+          <a href="https://github.com/veronicapiuri"
             ><i class="bi bi-github"></i
           ></a>
           <!--           <a href="https://leetcode.com/u/mohammadalshurbaji/"
